--- a/data-tidying.html
+++ b/data-tidying.html
@@ -145,6 +145,25 @@ head(catch_df)</code></pre>
 ## 4    SSE 1889       0     182   11   92    0 285             
 ## 5    SSE 1890       0     251   42    0    0 292             
 ## 6    SSE 1891       0     274   24    0    0 298</code></pre>
+<p>cmd + shift + m %&gt;% pipe operator</p>
+<ul>
+<li>Remove marginal sum and notes column</li>
+<li>Move from wide to long format</li>
+</ul>
+<pre class="r"><code>catch_long &lt;- catch_df %&gt;%
+  # negative values remove columns
+  select(-All, -notesRegCode) %&gt;% 
+  gather(key = &quot;species&quot;, value = &quot;catch&quot;, -Year, -Region)
+  
+  
+head(catch_long)</code></pre>
+<pre><code>##   Region Year species catch
+## 1    SSE 1886 Chinook     0
+## 2    SSE 1887 Chinook     0
+## 3    SSE 1888 Chinook     0
+## 4    SSE 1889 Chinook     0
+## 5    SSE 1890 Chinook     0
+## 6    SSE 1891 Chinook     0</code></pre>
 </div>
 <div id="split-apply-combine" class="section level1">
 <h1>Split-Apply-Combine</h1>
