--- a/data-tidying.html
+++ b/data-tidying.html
@@ -285,7 +285,58 @@ head(catch_joined)</code></pre>
 ## 4    SSE 1889 Chinook               0     0 Southern Southeast Alaska
 ## 5    SSE 1890 Chinook               0     0 Southern Southeast Alaska
 ## 6    SSE 1891 Chinook               0     0 Southern Southeast Alaska</code></pre>
-<pre class="r"><code>test &lt;- c(&quot;Region&quot; = &quot;code&quot;)</code></pre>
+<div id="spread" class="section level2">
+<h2>Spread</h2>
+<p>Make a wide dataframe using spread</p>
+<pre class="r"><code>catch_wide &lt;- catch_cleaned %&gt;% 
+  filter(Year &gt; 1990) %&gt;% 
+  select(-catch_thousands) %&gt;% 
+  spread(key = Year, value = catch)
+
+head(catch_wide)</code></pre>
+<pre><code>##   Region species 1991   1992 1993   1994 1995 1996 1997
+## 1    ALU Chinook    0      0    0      0    0    0    0
+## 2    ALU    Chum    0   2000 1000   1000    0    0    0
+## 3    ALU    Coho    0      0    0      0    0    0    0
+## 4    ALU    Pink    0 320000    0 860000    0    0    0
+## 5    ALU Sockeye 1000   3000    0      0    0    0    0
+## 6    BER Chinook    0      0    0      0    0    0    0</code></pre>
+<p>Separate and unite</p>
+<p>YYYY-MM-DD</p>
+<pre class="r"><code>dates_df &lt;- data.frame(date = c(&quot;5/24/1930&quot;,
+                                &quot;5/25/1930&quot;,
+                                &quot;5/26/1930&quot;,
+                                &quot;5/27/1930&quot;,
+                                &quot;5/28/1930&quot;),
+                       stringsAsFactors = FALSE)
+dates_df</code></pre>
+<pre><code>##        date
+## 1 5/24/1930
+## 2 5/25/1930
+## 3 5/26/1930
+## 4 5/27/1930
+## 5 5/28/1930</code></pre>
+<pre class="r"><code>dates_sep &lt;- dates_df %&gt;% 
+  separate(col = date, into = c(&quot;month&quot;, &quot;day&quot;, &quot;year&quot;), by = &quot;/&quot;, remove = F)
+
+head(dates_sep)</code></pre>
+<pre><code>##        date month day year
+## 1 5/24/1930     5  24 1930
+## 2 5/25/1930     5  25 1930
+## 3 5/26/1930     5  26 1930
+## 4 5/27/1930     5  27 1930
+## 5 5/28/1930     5  28 1930</code></pre>
+<pre class="r"><code>dates_unite &lt;- dates_sep %&gt;% 
+  unite(date_iso, year, month, day, sep = &quot;-&quot;)
+
+head(dates_unite)</code></pre>
+<pre><code>##        date  date_iso
+## 1 5/24/1930 1930-5-24
+## 2 5/25/1930 1930-5-25
+## 3 5/26/1930 1930-5-26
+## 4 5/27/1930 1930-5-27
+## 5 5/28/1930 1930-5-28</code></pre>
+</div>
 </div>
 
 
